# openapi.yml
@@ -795,7 +795,7 @@ components:
               description: The total amount of expenses.
               type: integer
               minimum: 0
-            groupedSummary:
+            groupSummary:
               description: |
                 The summary of expenses grouped by categories and priorities.
                 The categories are ordered by the amount in descending order.
@@ -852,7 +852,7 @@ components:
                         minimum: 0
                     required: [amount, level]
               required: [parentCategories, priorities]
-          required: [amount, groupedSummary]
+          required: [amount, groupSummary]
         income:
           type: object
           properties:
@@ -860,7 +860,7 @@ components:
               description: The total amount of incomes.
               type: integer
               minimum: 0
-            groupedSummary:
+            groupSummary:
               description: |
                 The summary of incomes grouped by wallets.
                 The wallets are ordered by the amount in descending order.
@@ -883,7 +883,7 @@ components:
                         minimum: 0
                     required: [amount, name]
               required: [wallets]
-          required: [amount, groupedSummary]
+          required: [amount, groupSummary]
       required: [expense, income]
 
     ClientRelatedError:
